[package]
name = "sms-types"
version = "0.1.0"
edition = "2024"

[features]
default = ["http", "websocket", "gnss"]
websocket = []
gnss = []

http = ["dep:serde_json"]
pdu = ["dep:sms-pdu"]
tracing = ["dep:tracing"]
utoipa = ["http", "dep:utoipa"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
sms-pdu = { version = "1.1.0", optional = true }
tracing = { version = "0.1.44", optional = true }
utoipa = { version = "5.4.0", optional = true }
