[package]
name = "sms-types"
version = "0.4.1"
edition = "2024"
license = "AGPL-3.0-only"
description = "Rust shared types for SMS Server and Client."
keywords = ["sms", "gsm", "types"]
categories = ["api-bindings"]
homepage = "https://github.com/morgverd/sms-types"
repository = "https://github.com/morgverd/sms-types"
documentation = "https://lib.rs/crates/sms-types"
readme = "README.md"
authors = ["morgverd <morgverd@gmail.com>"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["http", "websocket", "gnss"]
websocket = []
gnss = []

http = ["dep:serde_json"]
sqlx = ["http", "dep:sqlx"]
tracing = ["dep:tracing"]
utoipa = ["http", "dep:utoipa"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
sqlx = { version = "0.8.6", optional = true }
tracing = { version = "0.1.44", optional = true }
utoipa = { version = "5.4.0", optional = true }
